scalaplugin/src/test/resource/acyclic/src/test/resources/success/pkg/innercycle/a/A2.scala
package success.pkg.innercycle.a

class A2 {
  val x: A1 = null
  def z = p
}
