scalaplugin/src/test/resource/acyclic/src/test/resources/fail/cyclicgraph/E.scala
package fail.cyclicgraph
import acyclic.file

class E {
  val a: A = null
  val d = new D
}
